plantilla v2 terminada lista para rellenrar

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       ></i>
     </section>
     <section id="experience">
-      <p class="section__text__p1">Explore My</p>
+      <p class="section__text__p1 ex">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container">
         <div class="about-containers">
@@ -307,6 +307,90 @@
       ></i>
     </section>
     <section id="projects">
+      <p class="section__text__p1">Browse My Recent</p>
+      <h1 class="title">Projects</h1>
+      <div class="experience-details-container">
+        <div class="about-containers about-two">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                class="project-img"
+                src="./assets/project-1.png"
+                alt="Project 1"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Project one</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://www.linkedin.com/in/alder-mart%C3%ADnez-6146ba1b0/'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://www.linkedin.com/in/alder-mart%C3%ADnez-6146ba1b0/'"
+              >
+                Live demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                class="project-img"
+                src="./assets/project-2.png"
+                alt="Project 2"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Project two</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://www.linkedin.com/in/alder-mart%C3%ADnez-6146ba1b0/'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://www.linkedin.com/in/alder-mart%C3%ADnez-6146ba1b0/'"
+              >
+                Live demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                class="project-img"
+                src="./assets/project-3.png"
+                alt="Project 3"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Project three</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://www.linkedin.com/in/alder-mart%C3%ADnez-6146ba1b0/'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://www.linkedin.com/in/alder-mart%C3%ADnez-6146ba1b0/'"
+              >
+                Live demo
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <i
+        class="fa-solid fa-angles-down icon arrow"
+        onclick="location.href='/#projects1'"
+      ></i>
+    </section>
+    <section id="projects1">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
