plantilla v3 con hover para detalles

--- a/index.html
+++ b/index.html
@@ -317,7 +317,17 @@
                 class="project-img"
                 src="./assets/project-1.png"
                 alt="Project 1"
+              
               />
+              <div class="article-container capa">
+                <h3>SLee Dw</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                  modi hic corporis eligendi, sunt amet!  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                  modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                  modi
+                </p>
+              </div>
             </div>
             <h2 class="experience-sub-title project-title">Project one</h2>
             <div class="btn-container">
