--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 />
                 <div>
                   <h3>Django RESTFRAMEWORK</h3>
-                  <p>Experienced</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -178,6 +178,17 @@
                 />
                 <div>
                   <h3>Django</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  class="icon"
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                />
+                <div>
+                  <h3>Pyhton</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -189,20 +200,10 @@
                 />
                 <div>
                   <h3>MySQL</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  class="icon"
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                />
-                <div>
-                  <h3>GIT</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
+              
 
               <article>
                 <img
@@ -211,7 +212,7 @@
                   alt="Experience icon"
                 />
                 <div>
-                  <h3>HTML</h3>
+                  <h3>GIT</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -222,79 +223,70 @@
                   alt="Experience icon"
                 />
                 <div>
-                  <h3>CSS</h3>
+                  <h3>VSCODE</h3>
                   <p>Experienced</p>
                 </div>
               </article>
             </div>
           </div>
-          <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+          <div class="details-container container2">
+            <h2 class="experience-sub-title">SKILLS</h2>
             <div class="article-container">
               <article>
-                <img
-                  class="icon"
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                />
+                <i class="fa-brands fa-python iconin"></i>
+
                 <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
+                  <h3>Pyhton</h3>
+                </div>
+              </article>
+              <article>
+                <i class="fa-brands fa-linux iconin"></i>
+                <div>
+                  <h3>Linux</h3>
                 </div>
               </article>
               <article>
                 <img
-                  class="icon"
-                  src="./assets/checkmark.png"
+                  class="icon dj-icon"
+                  src="./assets/dj-icon.png"
                   alt="Experience icon"
                 />
                 <div>
-                  <h3>CSS</h3>
-                  <p>Experienced</p>
+                  <h3>Django</h3>
                 </div>
               </article>
               <article>
                 <img
-                  class="icon"
-                  src="./assets/checkmark.png"
+                  class="icon-MySQL"
+                  src="./assets/mysql-icon.png"
                   alt="Experience icon"
                 />
                 <div>
-                  <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <h3>MySQL</h3>
                 </div>
               </article>
               <article>
-                <img
-                  class="icon"
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                />
+                <i class="fa-brands fa-github iconin"></i>
                 <div>
-                  <h3>SASS</h3>
-                  <p>Intermediate</p>
+                  <h3>Github</h3>
                 </div>
               </article>
               <article>
-                <img
-                  class="icon"
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                />
+                <i class="fa-brands fa-docker iconin"></i>
                 <div>
-                  <h3>TypeScript</h3>
-                  <p>Experienced</p>
+                  <h3>Docker</h3>
                 </div>
               </article>
               <article>
-                <img
-                  class="icon"
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                />
+                <i class="fa-brands fa-html5 iconin"></i>
                 <div>
-                  <h3>Material UI</h3>
-                  <p>Experienced</p>
+                  <h3>HTML-5</h3>
+                </div>
+              </article>
+              <article>
+                <i class="fa-brands fa-css3-alt iconin"></i>
+                <div>
+                  <h3>CSS-3</h3>
                 </div>
               </article>
             </div>
@@ -317,15 +309,15 @@
                 class="project-img"
                 src="./assets/project-1.png"
                 alt="Project 1"
-              
               />
               <div class="article-container capa">
                 <h3>SLee Dw</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
-                  modi hic corporis eligendi, sunt amet!  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
-                  modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
-                  modi
+                  modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit
+                  amet consectetur adipisicing elit. Dolor modi hic corporis
+                  eligendi, sunt amet! Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Dolor modi
                 </p>
               </div>
             </div>
@@ -352,6 +344,16 @@
                 src="./assets/project-2.png"
                 alt="Project 2"
               />
+              <div class="article-container capa">
+                <h3>SLee Dw</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                  modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit
+                  amet consectetur adipisicing elit. Dolor modi hic corporis
+                  eligendi, sunt amet! Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Dolor modi
+                </p>
+              </div>
             </div>
             <h2 class="experience-sub-title project-title">Project two</h2>
             <div class="btn-container">
@@ -376,6 +378,16 @@
                 src="./assets/project-3.png"
                 alt="Project 3"
               />
+              <div class="article-container capa">
+                <h3>SLee Dw</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                  modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit
+                  amet consectetur adipisicing elit. Dolor modi hic corporis
+                  eligendi, sunt amet! Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Dolor modi
+                </p>
+              </div>
             </div>
             <h2 class="experience-sub-title project-title">Project three</h2>
             <div class="btn-container">
@@ -412,6 +424,16 @@
                 src="./assets/project-1.png"
                 alt="Project 1"
               />
+              <div class="article-container capa">
+                <h3>SLee Dw</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                  modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit
+                  amet consectetur adipisicing elit. Dolor modi hic corporis
+                  eligendi, sunt amet! Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Dolor modi
+                </p>
+              </div>
             </div>
             <h2 class="experience-sub-title project-title">Project one</h2>
             <div class="btn-container">
@@ -436,6 +458,16 @@
                 src="./assets/project-2.png"
                 alt="Project 2"
               />
+              <div class="article-container capa">
+                <h3>SLee Dw</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                  modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit
+                  amet consectetur adipisicing elit. Dolor modi hic corporis
+                  eligendi, sunt amet! Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Dolor modi
+                </p>
+              </div>
             </div>
             <h2 class="experience-sub-title project-title">Project two</h2>
             <div class="btn-container">
@@ -460,6 +492,16 @@
                 src="./assets/project-3.png"
                 alt="Project 3"
               />
+              <div class="article-container capa">
+                <h3>SLee Dw</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                  modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit
+                  amet consectetur adipisicing elit. Dolor modi hic corporis
+                  eligendi, sunt amet! Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Dolor modi
+                </p>
+              </div>
             </div>
             <h2 class="experience-sub-title project-title">Project three</h2>
             <div class="btn-container">
@@ -536,5 +578,7 @@
       src="https://kit.fontawesome.com/d2b20da030.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- <a target="_blank" href="https://icons8.com/icon/qULYrKvr-AFH/django">Django</a> icono de <a target="_blank" href="https://icons8.com">Icons8</a> -->
   </body>
 </html>
