--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <div class="logo">Alder Martinez</div>
       <div>
         <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#about">Acerca de</a></li>
+          <li><a href="#experience">Experiencia</a></li>
+          <li><a href="#projects">Proyectos</a></li>
+          <li><a href="#contact">Contacto</a></li>
         </ul>
       </div>
     </nav>
@@ -28,10 +28,10 @@
           <span class="ban3"></span>
         </div>
         <div class="menu-links">
-          <li><a href="#about" onclick="toogleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toogleMenu()">Experience</a></li>
-          <li><a href="#projects" onclick="toogleMenu()">Projects</a></li>
-          <li><a href="#contact" onclick="toogleMenu()">Contact</a></li>
+          <li><a href="#about" onclick="toogleMenu()">Acerca de</a></li>
+          <li><a href="#experience" onclick="toogleMenu()">Experiencia</a></li>
+          <li><a href="#projects" onclick="toogleMenu()">Proyectos</a></li>
+          <li><a href="#contact" onclick="toogleMenu()">Contacto</a></li>
         </div>
       </div>
     </nav>
@@ -43,7 +43,7 @@
         />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hello, I'm</p>
+        <p class="section__text__p1">Hola, yo soy</p>
         <h1 class="title">Alder Martinez</h1>
         <p class="section__text__p2">Backend Developer</p>
         <div class="btn-container">
@@ -51,10 +51,10 @@
             class="btn btn-color-2"
             onclick="window.open('./assets/resume-example.pdf')"
           >
-            Download CV
+            Descargar CV
           </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Contact Info
+            Información de contacto
           </button>
         </div>
         <div id="social-container">
@@ -97,8 +97,8 @@
       </div>
     </section>
     <section id="about">
-      <p class="section__text__p1">Get To Know More</p>
-      <h1 class="title">About Me</h1>
+      <p class="section__text__p1">Conozca más</p>
+      <h1 class="title">Hacerca de mi</h1>
       <div class="section-container">
         <div class="section__pic-container">
           <img
@@ -110,27 +110,19 @@
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
-              <img
-                class="icon"
-                src="./assets/experience.png"
-                alt="Experience icon"
-              />
-              <h3 class="ban1">Experience</h3>
+              <i class="fa-solid fa-medal iconin"></i>
+              <h3 class="ban1">Experiencia</h3>
               <p class="ban2">
-                2+ years <br />
+                Junior<br />
                 Backend Development
               </p>
             </div>
             <div class="details-container">
-              <img
-                class="icon"
-                src="./assets/education.png"
-                alt="Education icon"
-              />
-              <h3 class="ban1">Education</h3>
+              <i class="fa-solid fa-user-graduate iconin"></i>
+              <h3 class="ban1">Educación</h3>
               <p class="ban2">
-                B.Sc. Bachelors <br />
-                M.Sc. Masters degree
+                Ing. Mecatronico-UTM <br />
+                Dev. Backend-Platzi
               </p>
             </div>
           </div>
@@ -152,79 +144,54 @@
       ></i>
     </section>
     <section id="experience">
-      <p class="section__text__p1 ex">Explore My</p>
-      <h1 class="title">Experience</h1>
+      <p class="section__text__p1 ex">Explora mi</p>
+      <h1 class="title">Experiencia</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
             <h2 class="experience-sub-title">Backend Development</h2>
             <div class="article-container">
               <article>
-                <img
-                  class="icon"
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                />
+                <i class="fa-solid fa-circle-check iconin"></i>
                 <div>
                   <h3>Django RESTFRAMEWORK</h3>
-                  <p>Intermediate</p>
+                  <p>Intermedio</p>
                 </div>
               </article>
               <article>
-                <img
-                  class="icon"
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                />
+                <i class="fa-solid fa-circle-check iconin"></i>
                 <div>
                   <h3>Django</h3>
-                  <p>Intermediate</p>
+                  <p>Intermedio</p>
                 </div>
               </article>
               <article>
-                <img
-                  class="icon"
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                />
+                <i class="fa-solid fa-circle-check iconin"></i>
                 <div>
                   <h3>Pyhton</h3>
-                  <p>Experienced</p>
+                  <p>Experimentado</p>
                 </div>
               </article>
               <article>
-                <img
-                  class="icon"
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                />
+                <i class="fa-solid fa-circle-check iconin"></i>
                 <div>
                   <h3>MySQL</h3>
-                  <p>Intermediate</p>
+                  <p>Intermedio</p>
                 </div>
               </article>
-              
 
               <article>
-                <img
-                  class="icon"
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                />
+                <i class="fa-solid fa-circle-check iconin"></i>
                 <div>
                   <h3>GIT</h3>
-                  <p>Experienced</p>
+                  <p>Experimentado</p>
                 </div>
               </article>
               <article>
-                <img
-                  class="icon"
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                />
+                <i class="fa-solid fa-circle-check iconin"></i>
                 <div>
                   <h3>VSCODE</h3>
-                  <p>Experienced</p>
+                  <p>Experimentado</p>
                 </div>
               </article>
             </div>
@@ -299,8 +266,8 @@
       ></i>
     </section>
     <section id="projects">
-      <p class="section__text__p1">Browse My Recent</p>
-      <h1 class="title">Projects</h1>
+      <p class="section__text__p1">Navega por mis</p>
+      <h1 class="title">Proyectos</h1>
       <div class="experience-details-container">
         <div class="about-containers about-two">
           <div class="details-container color-container">
@@ -311,7 +278,7 @@
                 alt="Project 1"
               />
               <div class="article-container capa">
-                <h3>SLee Dw</h3>
+                <h3>Platzigram</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
                   modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit
@@ -321,7 +288,7 @@
                 </p>
               </div>
             </div>
-            <h2 class="experience-sub-title project-title">Project one</h2>
+            <h2 class="experience-sub-title project-title">Proyecto uno</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -333,7 +300,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://www.linkedin.com/in/alder-mart%C3%ADnez-6146ba1b0/'"
               >
-                Live demo
+                Demo
               </button>
             </div>
           </div>
@@ -345,7 +312,7 @@
                 alt="Project 2"
               />
               <div class="article-container capa">
-                <h3>SLee Dw</h3>
+                <h3>Task app</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
                   modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit
@@ -355,7 +322,7 @@
                 </p>
               </div>
             </div>
-            <h2 class="experience-sub-title project-title">Project two</h2>
+            <h2 class="experience-sub-title project-title">Proyecto dos</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -367,7 +334,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://www.linkedin.com/in/alder-mart%C3%ADnez-6146ba1b0/'"
               >
-                Live demo
+                Demo
               </button>
             </div>
           </div>
@@ -379,7 +346,7 @@
                 alt="Project 3"
               />
               <div class="article-container capa">
-                <h3>SLee Dw</h3>
+                <h3>Premios Platzi</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
                   modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit
@@ -389,7 +356,7 @@
                 </p>
               </div>
             </div>
-            <h2 class="experience-sub-title project-title">Project three</h2>
+            <h2 class="experience-sub-title project-title">Proyecto tres</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -401,7 +368,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://www.linkedin.com/in/alder-mart%C3%ADnez-6146ba1b0/'"
               >
-                Live demo
+                Demo
               </button>
             </div>
           </div>
@@ -413,8 +380,8 @@
       ></i>
     </section>
     <section id="projects1">
-      <p class="section__text__p1">Browse My Recent</p>
-      <h1 class="title">Projects</h1>
+      <p class="section__text__p1">Navega por mis</p>
+      <h1 class="title">Proyectos</h1>
       <div class="experience-details-container">
         <div class="about-containers about-two">
           <div class="details-container color-container">
@@ -425,7 +392,7 @@
                 alt="Project 1"
               />
               <div class="article-container capa">
-                <h3>SLee Dw</h3>
+                <h3>Password generator</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
                   modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit
@@ -435,7 +402,7 @@
                 </p>
               </div>
             </div>
-            <h2 class="experience-sub-title project-title">Project one</h2>
+            <h2 class="experience-sub-title project-title">Project cuatro</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -447,7 +414,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://www.linkedin.com/in/alder-mart%C3%ADnez-6146ba1b0/'"
               >
-                Live demo
+                Demo
               </button>
             </div>
           </div>
@@ -459,7 +426,7 @@
                 alt="Project 2"
               />
               <div class="article-container capa">
-                <h3>SLee Dw</h3>
+                <h3>Api</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
                   modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit
@@ -469,7 +436,7 @@
                 </p>
               </div>
             </div>
-            <h2 class="experience-sub-title project-title">Project two</h2>
+            <h2 class="experience-sub-title project-title">Proyecto cinco</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -481,7 +448,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://www.linkedin.com/in/alder-mart%C3%ADnez-6146ba1b0/'"
               >
-                Live demo
+                Demo
               </button>
             </div>
           </div>
@@ -493,7 +460,7 @@
                 alt="Project 3"
               />
               <div class="article-container capa">
-                <h3>SLee Dw</h3>
+                <h3>Clon de google</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
                   modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit
@@ -503,7 +470,7 @@
                 </p>
               </div>
             </div>
-            <h2 class="experience-sub-title project-title">Project three</h2>
+            <h2 class="experience-sub-title project-title">Proyecto seis</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -515,7 +482,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://www.linkedin.com/in/alder-mart%C3%ADnez-6146ba1b0/'"
               >
-                Live demo
+                Demo
               </button>
             </div>
           </div>
@@ -527,8 +494,8 @@
       ></i>
     </section>
     <section id="contact">
-      <p class="section__text__p1">Get in Touch</p>
-      <h1 class="title">Contact me</h1>
+      <p class="section__text__p1">Ponte en contacto</p>
+      <h1 class="title">Contáctame</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
@@ -537,7 +504,7 @@
             alt="Email icon"
           />
           <p>
-            <a href="mailto:exampleemail@gmail.com">Exampleemail@gmail.com</a>
+            <a href="mailto:alder.mtz.ant@gmail.com">alder.mtz.ant@gmail.com</a>
           </p>
         </div>
         <div class="contact-info-container">
@@ -563,10 +530,10 @@
       <nav id="footer">
         <div class="nav-links-container">
           <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">Acerca de</a></li>
+            <li><a href="#experience">Experiencia</a></li>
+            <li><a href="#projects">Proyectos</a></li>
+            <li><a href="#contact">Contacto</a></li>
           </ul>
         </div>
       </nav>
