modificacion de fuente

--- a/index.html
+++ b/index.html
@@ -379,13 +379,12 @@
             <img class="project-img" src="./assets/c-pendulo.png" alt="Project 6" />
             <div class="article-container capa">
               <h3>Carro-péndulo invertido</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
-                modi hic corporis eligendi, sunt amet! Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Dolor modi hic corporis
-                eligendi, sunt amet! Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Dolor modi
-              </p>
+              <p>Proyecto educativo donde se abordó el desarrollo integral del modelo matemático del
+                carro péndulo invertido, junto con su correspondiente diseño físico. La implementación del controlador
+                PID se realizó en una placa Arduino Uno, mientras que el reconocimiento de imágenes se logró mediante el
+                uso de una Raspberry Pi, programada en Python con el apoyo de bibliotecas especializadas en
+                reconocimiento de imágenes. </p>
+
             </div>
           </div>
           <h2 class="experience-sub-title project-title">Proyecto seis</h2>
