modificacion de resolucion de pantalla

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <p class="section__text__p1">Conozca más</p>
     <h1 class="title">Hacerca de mi</h1>
     <div class="section-container">
-      <div class="section__pic-container">
+      <div class="section__pic-container pic2">
         <img class="about-pic" src="./assets/about-pic.png" alt="Profile pricture" />
       </div>
       <div class="about-details-container">
