modificacion de resolucion de giro de pantalla v4

--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
     <i class="fa-solid fa-angles-down icon arrow" onclick="location.href='/#projects1'"></i>
   </section>
   <section id="projects1">
-    <p class="section__text__p1">Navega por mis</p>
-    <h1 class="title">Proyectos</h1>
+    <p class="section__text__p1 back">Navega por mis</p>
+    <h1 class="title back">Proyectos</h1>
     <div class="experience-details-container">
       <div class="about-containers about-two">
         <div class="details-container color-container">
