--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My protafolio</title>
+  <title>Mi protafolio</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="mediaquires.css" />
 </head>
