--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
               Github
             </button>
             <button class="btn btn-color-2 project-btn"
-              onclick="window.open('https://github.com/AlderMtz/PlatzigramV1', '_blank')">
+              onclick="window.open('https://taskapp-hz1i.onrender.com/tasks', '_blank')">
 
               Demo
             </button>
@@ -338,7 +338,7 @@
               </p>
             </div>
           </div>
-          <h2 class="experience-sub-title project-title">Project cuatro</h2>
+          <h2 class="experience-sub-title project-title">Proyecto cuatro</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="window.open('https://github.com/AlderMtz/Api_DRF', '_blank')">
