--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
               Github
             </button>
             <button class="btn btn-color-2 project-btn"
-              onclick="window.open('https://github.com/AlderMtz/Password_Generator', '_blank')">
+              onclick="window.open('https://aldermtz.pythonanywhere.com/', '_blank')">
               Demo
             </button>
           </div>
