--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
               Github
             </button>
             <button class="btn btn-color-2 project-btn"
-              onclick="window.open('https://github.com/AlderMtz/Password_Generator', '_blank')">
+              onclick="window.open('https://api-drf.onrender.com/api/projects/', '_blank')">
 
               Demo
             </button>
