--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </nav>
   <section id="profile">
     <div class="section__pic-container box1">
-      <img src="./assets/profile-pic.png" alt="Alder Martinez profile picture" />
+      <img src="./assets/profile-pic2.png" alt="Alder Martinez profile picture" />
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hola, yo soy</p>
@@ -87,7 +87,7 @@
   </section>
   <section id="about">
     <p class="section__text__p1">Conozca más</p>
-    <h1 class="title">Hacerca de mi</h1>
+    <h1 class="title">Acerca de mi</h1>
     <div class="section-container">
       <div class="section__pic-container pic2">
         <img class="about-pic" src="./assets/about-pic.png" alt="Profile pricture" />
