--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
               Github
             </button>
             <button class="btn btn-color-2 project-btn"
-              onclick="window.open('https://github.com/AlderMtz/PlatzigramV1', '_blank')">
+              onclick="window.open('https://platzigram-deploy.onrender.com/users/login/', '_blank')">
               Demo
             </button>
           </div>
