--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
             </div>
           </div>
-          <h2 class="experience-sub-title project-title">Proyecto uno</h2>
+          <h2 class="experience-sub-title project-title">Platzigram</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="window.open('https://github.com/AlderMtz/PlatzigramV1', '_blank')">
@@ -279,7 +279,7 @@
 
             </div>
           </div>
-          <h2 class="experience-sub-title project-title">Proyecto dos</h2>
+          <h2 class="experience-sub-title project-title">Task app</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="window.open('https://github.com/AlderMtz/Api_REACT', '_blank')">
@@ -305,7 +305,7 @@
 
             </div>
           </div>
-          <h2 class="experience-sub-title project-title">Proyecto tres</h2>
+          <h2 class="experience-sub-title project-title">Password generator</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="window.open('https://github.com/AlderMtz/Password_Generator', '_blank')">
@@ -338,14 +338,14 @@
               </p>
             </div>
           </div>
-          <h2 class="experience-sub-title project-title">Proyecto cuatro</h2>
+          <h2 class="experience-sub-title project-title">API</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="window.open('https://github.com/AlderMtz/Api_DRF', '_blank')">
               Github
             </button>
             <button class="btn btn-color-2 project-btn"
-              onclick="window.open('https://api-drf.onrender.com/api/projects/', '_blank')">
+              onclick="window.open('https://api-drf-p2rc.onrender.com/api/projects/', '_blank')">
 
               Demo
             </button>
@@ -362,7 +362,7 @@
 
             </div>
           </div>
-          <h2 class="experience-sub-title project-title">Proyecto cinco</h2>
+          <h2 class="experience-sub-title project-title">Clon de google</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="window.open('https://github.com/AlderMtz/clone_google', '_blank')">
@@ -387,7 +387,7 @@
 
             </div>
           </div>
-          <h2 class="experience-sub-title project-title">Proyecto seis</h2>
+          <h2 class="experience-sub-title project-title">Carro-péndulo invertido</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="window.open('https://www.linkedin.com/posts/exon-villalobos_control-de-p%C3%A9ndulo-invertido-de-dos-ruedas-activity-7106360856455565313-Iff4?utm_source=share&utm_medium=member_desktop', '_blank')">
