--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
               Github
             </button>
             <button class="btn btn-color-2 project-btn"
-              onclick="window.open('https://taskapp-hz1i.onrender.com/tasks', '_blank')">
+              onclick="window.open('https://taskapp-2mjd.onrender.com/tasks', '_blank')">
 
               Demo
             </button>
