listo para buscar trabajo

--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
             <i class="fa-solid fa-medal iconin"></i>
             <h3 class="ban1">Experiencia</h3>
             <p class="ban2">
-              Junior<br />
               Backend Development
             </p>
           </div>
@@ -113,7 +112,7 @@
         </div>
         <div class="text-container">
           <p class="about-text">
-            Soy un apasionado desarrollador backend en Python, especializado en el uso del framework Django. Mi
+            Desarrollador backend en Python, especializado en el uso de frameworks en Python. Mi
             experiencia se respalda con proyectos desarrollados durante diplomados y cursos que he completado,
             destacando mis habilidades en desarrollo web, creación de APIs y manipulación de bases de datos. <br>
             Fuera del mundo del desarrollo, disfruto mantenerme activo y saludable yendo al gimnasio. También me encanta
@@ -136,43 +135,43 @@
               <i class="fa-solid fa-circle-check iconin"></i>
               <div>
                 <h3>Django RESTFRAMEWORK</h3>
-                <p>Intermedio</p>
+                <!-- <p>Intermedio</p> -->
               </div>
             </article>
             <article>
               <i class="fa-solid fa-circle-check iconin"></i>
               <div>
                 <h3>Django</h3>
-                <p>Intermedio</p>
+                <!-- <p>Intermedio</p> -->
               </div>
             </article>
             <article>
               <i class="fa-solid fa-circle-check iconin"></i>
               <div>
                 <h3>Pyhton</h3>
-                <p>Experimentado</p>
+                <!-- <p>Experimentado</p> -->
               </div>
             </article>
             <article>
               <i class="fa-solid fa-circle-check iconin"></i>
               <div>
-                <h3>MySQL</h3>
-                <p>Intermedio</p>
+                <h3>Base de Datos</h3>
+                <!-- <p>Intermedio</p> -->
               </div>
             </article>
 
             <article>
               <i class="fa-solid fa-circle-check iconin"></i>
               <div>
-                <h3>GIT</h3>
-                <p>Experimentado</p>
+                <h3>Control de versiones</h3>
+                <!-- <p>Experimentado</p> -->
               </div>
             </article>
             <article>
               <i class="fa-solid fa-circle-check iconin"></i>
               <div>
-                <h3>VSCODE</h3>
-                <p>Experimentado</p>
+                <h3>Servidores Linux</h3>
+                <!-- <p>Intermedio</p> -->
               </div>
             </article>
           </div>
@@ -305,7 +304,7 @@
 
             </div>
           </div>
-          <h2 class="experience-sub-title project-title">Password generator</h2>
+          <h2 class="experience-sub-title project-title">P.G. V1</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="window.open('https://github.com/AlderMtz/Password_Generator', '_blank')">
@@ -378,7 +377,7 @@
           <div class="article-container">
             <img class="project-img" src="./assets/c-pendulo.png" alt="Project 6" />
             <div class="article-container capa">
-              <h3>Carro-péndulo invertido</h3>
+              <h3>Carro péndulo invertido</h3>
               <p>Proyecto educativo donde se abordó el desarrollo integral del modelo matemático del
                 carro péndulo invertido, junto con su correspondiente diseño físico. La implementación del controlador
                 PID se realizó en una placa Arduino Uno, mientras que el reconocimiento de imágenes se logró mediante el
@@ -387,7 +386,7 @@
 
             </div>
           </div>
-          <h2 class="experience-sub-title project-title">Carro-péndulo invertido</h2>
+          <h2 class="experience-sub-title project-title">MOSO</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="window.open('https://www.linkedin.com/posts/exon-villalobos_control-de-p%C3%A9ndulo-invertido-de-dos-ruedas-activity-7106360856455565313-Iff4?utm_source=share&utm_medium=member_desktop', '_blank')">
