--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
       <div class="contact-info-container">
         <img class="icon contact-icon" src="./assets/linkedin.png" alt="linkedin icon" />
         <p>
-          <a href="mailto:https://www.linkedin.com/in/alder-mart%C3%ADnez-6146ba1b0/">Linkedin</a>
+          <a href="https://www.linkedin.com/in/alder-mart%C3%ADnez-6146ba1b0/">Linkedin</a>
         </p>
       </div>
       <div class="contact-info-container">
